WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241352
Some trustd network requests are not attributed to the UIProcess
https://bugs.webkit.org/show_bug.cgi?id=241352
Summary
Some trustd network requests are not attributed to the UIProcess
Ben Nham
Reported
2022-06-06 15:29:27 PDT
Some of the calls to SecTrustEvaluate (in particular the one in ResourceResponseCocoa) are not made with a corresponding call to SecTrustSetClientAuditToken. As a result, if trustd ends up making a network request to fulfill that API request (e.g. for OCSP verification), the corresponding network request is misattributed to NetworkProcess rather than the UIProcess. To fix this, we add a call to SecTrustSetClientAuditToken in ResourceResponse::platformCertificateInfo.
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2022-06-06 15:34:47 PDT
rdar://91322555
Ben Nham
Comment 2
2022-06-06 15:45:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1335
EWS
Comment 3
2022-06-07 10:48:47 PDT
Committed
r295357
(
251366@main
): <
https://commits.webkit.org/251366@main
> Reviewed commits have been landed. Closing PR #1335 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug