Source/WebKit/NetworkProcess/NetworkLoad.cpp
@@ -248,8 +248,16 @@ void NetworkLoad::notifyDidReceiveResponse(ResourceResponse&& response, Negotiat
 {
     ASSERT(RunLoop::isMain());
 
-    if (m_parameters.needsCertificateInfo)
-        response.includeCertificateInfo();
+    if (m_parameters.needsCertificateInfo) {
+        Span<const std::byte> auditToken;
+
+#if PLATFORM(COCOA)
+        if (auto token = m_networkProcess->sourceApplicationAuditToken())
+            auditToken = asBytes(Span<unsigned> { token->val });
+#endif
+
+        response.includeCertificateInfo(auditToken);
+    }
 
     m_client.get().didReceiveResponse(WTFMove(response), privateRelayed, WTFMove(completionHandler));
 }
